fix: prepare students batch input
