# server/server/src/interfaces/person.ts
@@ -1,6 +1,7 @@
 import {Entity, Generic} from './entity';
 
 export interface Person extends Entity, Generic {
+  internalId: string;
   name: string;
   firstSurname: string;
   secondSurname?: string;
